changed naming of api endpoints, more human readable
